Add removing card slots from collections
