# api/docs/swagger.json
@@ -144,7 +144,16 @@
                         }
                     },
                     "401": {
-                        "description": "Unauthorized"
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/controller.ErrResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/controller.ErrResponse"
+                        }
                     }
                 }
             }
@@ -225,7 +234,10 @@
                         }
                     },
                     "401": {
-                        "description": "Unauthorized"
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/controller.ErrResponse"
+                        }
                     }
                 }
             }
@@ -263,11 +275,11 @@
         },
         "/collection/{collectionId}": {
             "post": {
-                "description": "Adds a new card slot to an existing collection",
+                "description": "Adds, removes or alters a card slot in an existing collection",
                 "tags": [
                     "Collection"
                 ],
-                "summary": "Add new card slot",
+                "summary": "Add, remove or alter card slot",
                 "parameters": [
                     {
                         "type": "string",
@@ -288,7 +300,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.CreateCardSlot"
+                            "$ref": "#/definitions/dto.PostCardSlot"
                         }
                     }
                 ],
@@ -306,7 +318,10 @@
                         }
                     },
                     "401": {
-                        "description": "Unauthorized"
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/controller.ErrResponse"
+                        }
                     }
                 }
             }
@@ -397,20 +412,6 @@
                 }
             }
         },
-        "dto.CreateCardSlot": {
-            "type": "object",
-            "required": [
-                "cardId"
-            ],
-            "properties": {
-                "amount": {
-                    "type": "integer"
-                },
-                "cardId": {
-                    "type": "integer"
-                }
-            }
-        },
         "dto.CreateCollection": {
             "type": "object",
             "required": [
@@ -488,6 +489,21 @@
                 },
                 "username": {
                     "type": "string"
+                }
+            }
+        },
+        "dto.PostCardSlot": {
+            "type": "object",
+            "required": [
+                "amount",
+                "cardId"
+            ],
+            "properties": {
+                "amount": {
+                    "type": "integer"
+                },
+                "cardId": {
+                    "type": "integer"
                 }
             }
         },
